modificado detalle producto

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -16,7 +16,7 @@
 		</header>
 		
 		<main class="p-4">
-			<h1 class="text-gray-700 font-bold text-2xl text-center">Bienvenidos a G@latus Store!!</h1>
+			<h1 class="text-gray-700 font-bold text-2xl text-center">Bienvenidos a G@latus Store!</h1>
 		</main>
 		
 </body>
